@@ -23,7 +23,7 @@ class Pico2WaveTTSBackend(base.SimpleTTSBackendBase):
 	def runCommand(self,text,outFile):
 		args = ['pico2wave']
 		if self.language: args.extend(['-l',self.language])
-		args.extend(['-w', '{0}'.format(outFile), '{0}'.format(text)])
+		args.extend(['-w', u'{0}'.format(outFile), u'{0}'.format(text)])
 		subprocess.call(args)
 		
 	def languages(self):
