@@ -4,13 +4,25 @@ import bs4
 
 def currentWindowXMLFile():
 	base = xbmc.getInfoLabel('Window.Property(xmlfile)')
-	#print base
 	if os.path.exists(base): return base
 	path = getXBMCSkinPath(base)
 	if os.path.exists(path): return path
 	return None
 
+def currentWindowIsAddon():
+	path = xbmc.getInfoLabel('Window.Property(xmlfile)')
+	if not path: return None
+	return os.path.exists(path)
+	
 def getXBMCSkinPath(fname):
+	path = os.path.join(xbmc.translatePath('special://skin'),'720p',fname)
+	if os.path.exists(path): return path
+	path = os.path.join(xbmc.translatePath('special://skin'),'1080i',fname)
+	if os.path.exists(path): return path
+	return getXBMCSkinPathCaseLowercase(fname)
+	
+def getXBMCSkinPathCaseLowercase(fname):
+	fname = fname.lower()
 	path = os.path.join(xbmc.translatePath('special://skin'),'720p',fname)
 	if os.path.exists(path): return path
 	path = os.path.join(xbmc.translatePath('special://skin'),'1080i',fname)
@@ -43,19 +55,19 @@ def extractInfos(text):
 		
 		parts = middle.split(',')
 		if len(parts) > 2:
-			info = xbmc.getInfoLabel(parts[0])
+			info = xbmc.getInfoLabel(parts[0]).decode('utf-8')
 			if info:
 				middle = parts[1] + info + parts[2]
 			else:
 				middle = ''
 		elif len(parts) > 1:
-			info = xbmc.getInfoLabel(parts[0])
+			info = xbmc.getInfoLabel(parts[0]).decode('utf-8')
 			if info:
 				middle = parts[1] + info
 			else:
 				middle = ''
 		else:
-			middle = xbmc.getInfoLabel(middle)
+			middle = xbmc.getInfoLabel(middle).decode('utf-8')
 			
 		if middle: middle += '... '
 		text = text[:pos] + middle + text[i+1:]
@@ -68,7 +80,7 @@ class WindowParser:
 		self._listItemTexts = {}
 		self.currentControl = None
 		self.includes = None
-		if 'skin.' in xml_path:
+		if not currentWindowIsAddon():
 			self.processIncludes()
 			import codecs
 			with codecs.open(os.path.join(getXBMCSkinPath(''),'TESTCurrent.xml'),'w','utf-8') as f: f.write(self.soup.prettify())
@@ -82,36 +94,21 @@ class WindowParser:
 				continue
 			matchingInclude = self.includes.getInclude(i.string)
 			if not matchingInclude:
-				print 'INCLUDE NOT FOUND: %s' % i.string
+				#print 'INCLUDE NOT FOUND: %s' % i.string
 				continue
-			print 'INCLUDE FOUND: %s' % i.string
+			#print 'INCLUDE FOUND: %s' % i.string
 			new = bs4.BeautifulSoup(unicode(matchingInclude),'xml').find('include')
 			i.replace_with(new)
 			new.unwrap()
 			
 	def addonReplacer(self,m):
-		return xbmc.getInfoLabel(m.group(0))
+		return xbmc.getInfoLabel(m.group(0)).decode('utf-8')
 		
 	def variableReplace(self,m):
 		return self.includes.getVariable(m.group(1))
 		
 	def localizeReplacer(self,m):
 		return xbmc.getLocalizedString(int(m.group(1)))
-		
-#	def infoReplacer(self,m):
-#		info = m.group(1)
-#		if info.lower().startswith('listitem.') and self.currentControl:
-#			info = 'Container({0}).{1}'.format(self.currentControl,info)
-#		parts = info.split(',')
-#		print info
-#		if len(parts) > 2:
-#			info = parts[1] + xbmc.getInfoLabel(parts[0]) + parts[2]
-#		elif len(parts) > 1:
-#			info = parts[1] + xbmc.getInfoLabel(parts[0])
-#		else:
-#			info = xbmc.getInfoLabel(info)
-#		print info
-#		return info
 	
 	def parseFormatting(self,text):
 		text = tagRE.sub('',text).replace('[CR]','... ').strip(' .')
@@ -126,7 +123,7 @@ class WindowParser:
 		return self.soup.find('control',{'id':controlID})
 		
 	def getLabelText(self,label):
-		visible = label.find('visible')
+		visible = label.find('visible',recursive=False)
 		if visible and visible.string and not xbmc.getCondVisibility(visible.string): return None
 		
 		l = label.find('label')
@@ -142,16 +139,22 @@ class WindowParser:
 					text = '$LOCALIZE[{0}]'.format(text)
 				else:
 					text = '$INFO[{0}]'.format(text)
+		if not text or text == '-':
+			text = None
+			if label.get('id'):
+				#Nothing set for label. Try getting programatically set label.
+				text = xbmc.getInfoLabel('Control.GetLabel({0})'.format(label.get('id'))).decode('utf-8')
 		if not text: return None
 		return tagRE.sub('',text).replace('[CR]','... ').strip(' .')
 
 	def processTextList(self,text_list):
 		texts = []
+		check = []
 		for t in text_list:
-			print repr(t)
 			parsed = self.parseFormatting(t)
-			print repr(parsed)
-			if parsed and not parsed in texts: texts.append(parsed)
+			if parsed and not t in check:
+				texts.append(parsed)
+				check.append(t)
 		return texts
 		
 	def getListItemTexts(self,controlID):
@@ -178,44 +181,52 @@ class WindowParser:
 			if not self.controlIsVisible(l): continue
 			for p in l.parents:
 				if not self.controlIsVisible(p): break
-				if p.get('type') in ('list','fixedlist','wraplist','panel'):
-					break
+				if p.get('type') in ('list','fixedlist','wraplist','panel'): break
 			else:
 				text = self.getLabelText(l)
 				if text and not text in texts: texts.append(text)
 		return self.processTextList(texts)
 		
 	def controlIsVisible(self,control):
-		visible = control.find('visible')
+		visible = control.find('visible',recursive=False)
 		if not visible: return True
 		if not visible.string: return True
-		return xbmc.getCondVisibility(visible.string)
+		if not xbmc.getCondVisibility(visible.string):
+			return False
+		else:
+			return True
 		
 class Includes:
 	def __init__(self):
 		path = getXBMCSkinPath('Includes.xml')
 		self.soup = bs4.BeautifulSoup(open(path),'xml')
 		self._includesFilesLoaded = False
+		self.includesMap = {}
 
 	def loadIncludesFiles(self):
 		if self._includesFilesLoaded: return
 		basePath = getXBMCSkinPath('')
-		for i in self.soup.find('includes').findAll('include',{'file': lambda x: x}):
-			xmlName = i.get('file')
-			if not xmlName: continue
-			p = os.path.join(basePath,xmlName)
-			if not os.path.exists(p): continue
-			soup =  bs4.BeautifulSoup(open(p),'xml')
-			includes = soup.find('includes')
-			i.replace_with(includes)
-			includes.unwrap()
+		for i in self.soup.find('includes').findAll('include'):
+			xmlName = xbmc.validatePath(i.get('file'))
+			if xmlName:
+				p = os.path.join(basePath,xmlName)
+				if not os.path.exists(p):
+					continue
+				soup =  bs4.BeautifulSoup(open(p),'xml')
+				includes = soup.find('includes')
+				i.replace_with(includes)
+				for sub_i in includes.findAll('include'): self.includesMap[sub_i.get('name')] = sub_i
+				includes.unwrap()
+			else:
+				self.includesMap[i.get('name')] = i
 		self._includesFilesLoaded = True
 		import codecs
 		with codecs.open(os.path.join(getXBMCSkinPath(''),'Includes_Processed.xml'),'w','utf-8') as f: f.write(self.soup.prettify())
 		
 	def getInclude(self,name):
 		self.loadIncludesFiles()
-		return self.soup.find('includes').find('include',{'name':name})
+		return self.includesMap.get(name)
+		#return self.soup.find('includes').find('include',{'name':name})
 		
 	def getVariable(self,name):
 		var = self.soup.find('includes').find('variable',{'name':name})
@@ -225,7 +236,10 @@ class Includes:
 			if not condition:
 				return val.string or ''
 			else:
-				if xbmc.getCondVisibility(condition): return val.string or ''
+				if xbmc.getCondVisibility(condition):
+					#print condition
+					#print repr(val.string)
+					return val.string or ''
 		return ''
 		
 def getWindowParser():
